# retail-portfolio

./: .bash_history  .dockerignore  .env.example  .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  httpie-collection-retail-portfolio.json  patch.diff  pyproject.toml  test_api.py  test_db.py
.agent/agents/: architecture-reviewer.md  pr-reviewer.md  ticket-groomer.md  ticket-implementer.md
.claude/agents/: integration-test-writer.md  test-writer-services-repos.md
.github/workflows/: ci.yml
.opencode/reviews/: arch-review-issue-77.md
.zed/: debug.json
frontend/: .env.example  .prettierignore  AGENTS.md  Dockerfile  check.txt  check2.txt  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.d.ts  hooks.server.ts  setupTest.ts
migrations/: env.py
migrations/versions/: 091b98c6bb27_merge_multiple_heads.py  0c71603756dd_seed_institutions.py  0d99570e56cf_add_integration_user_id_to_accounts.py  0d9b3a153da8_add_price_unique_constraint.py  2b3c4d5e6f7g_add_currency_to_accounts.py  4bc783100e62_merge_heads.py  4d78820d50bd_add_price_alerts_security_notes_.py  57a42e499ef3_create_all_models.py  5ab75fd64c79_reset_schema.py  6259843f127a_reset_schema.py  75fd69f81a15_add_watchlist_models.py  7cb8e3038b76_change_broker_account_id_to_uuid.py  (+22 more)
openwiki/: .last-update.json  quickstart.md
src/: .env.example  AGENTS.md  database.py  enums.py  exception.py  main.py  models.py  utils.py  worker.py
tests/: conftest.py  test_main.py
(+418 files in other folders)
